extract pixi-related implementation from RobotlegsJS.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,24 @@
 {
-  "baseUrl": "src",
   "compilerOptions": {
     "outDir": "lib",
     "target": "es5",
+    "lib": ["es6", "dom"],
+    "types": ["reflect-metadata"],
     "module": "commonjs",
-    "declaration": false,
-    "noImplicitAny": false,
-    "sourceMap": true,
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
+  "include": [
+    "src/**.ts"
+  ],
+  "files": [
+    "./typings/index.d.ts"
+  ],
   "exclude": [
     "node_modules",
     "bower_components",
     "test",
     "definitions"
-  ],
-  "rootDirs": [
-    "src/"
-  ],
-  "filesGlob": [
-    "src/*.ts",
-    "src/**/*.ts",
-    "test/*.ts",
-    "test/**/*.ts",
-    "!node_modules/**"
   ]
 }
