--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "robotlegs-pixi",
   "version": "0.1.0",
-  "description": "PIXI v4 integration with for RobotlegsJS",
+  "description": "PIXI View Integration with RobotlegsJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "mocha test/**/*.test.ts --require ts-node/register",
-    "build": "cp node_modules/inversify-dts/inversify/inversify.d.ts . && tsc -d",
+    "start": "EXAMPLE=1 webpack-dev-server",
+    "build": "tsc -d",
     "prepublish": "publish-please guard && rimraf ./lib && npm run build",
     "publish-please": "publish-please"
   },
@@ -17,23 +17,25 @@
   "keywords": [
     "TypeScript",
     "Robotlegs",
-    "IoC"
+    "IoC",
+    "PIXI"
   ],
   "author": "Goodgame Studios",
   "license": "MIT",
   "dependencies": {
-    "robotlegs": "file:../robotlegsjs"
+    "robotlegs": "file:../RobotlegsJS"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^1.1.1",
+    "awesome-typescript-loader": "^2.2.4",
     "browserify-versionify": "^1.0.6",
     "glslify": "^5.1.0",
-    "inversify-dts": "^2.2.0",
+    "html-webpack-plugin": "^2.22.0",
+    "ify-loader": "^1.0.3",
     "pixi.js": "^4.0.0",
     "publish-please": "^2.1.4",
     "reflect-metadata": "^0.1.8",
     "rimraf": "^2.5.2",
-    "typescript": "^2.1.0-dev.20160811",
+    "typescript": "^2.0.2",
     "webpack": "^2.1.0-beta.20",
     "webpack-dev-server": "^2.1.0-beta.0"
   },
