--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,19 +6,17 @@
     "types": ["reflect-metadata"],
     "module": "commonjs",
     "moduleResolution": "node",
+    "declaration": false,
+    "noImplicitAny": false,
+    "sourceMap": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true
   },
   "include": [
-    "src/**.ts"
+    "./src/**/*.ts",
+    "./test/**/*.ts"
   ],
   "files": [
     "./typings/index.d.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "bower_components",
-    "test",
-    "definitions"
   ]
 }
