--- a/package.json
+++ b/package.json
@@ -2,45 +2,83 @@
   "name": "robotlegs-pixi",
   "version": "1.0.0-alpha.1",
   "description": "PIXI View Integration with RobotlegsJS",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
+  "main": "lib/src/index.js",
+  "typings": "lib/src/index.d.ts",
   "scripts": {
-    "start": "EXAMPLE=1 webpack-dev-server",
-    "build": "tsc -d",
-    "prepublish": "publish-please guard && rimraf ./lib && npm run build",
+    "test": "karma start --single-run",
+    "mocha": "mocha test/**/*.test.ts --require ts-node/register",
+    "autoformat": "tsfmt -r",
+    "prepublish": "tsc -d && publish-please guard",
     "publish-please": "publish-please"
   },
   "repository": {
     "type": "git",
-    "url": "git@source.services.ggs-net.com:game-core/typescript-robotlegs-framework.git"
+    "url": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi.git"
   },
   "keywords": [
     "TypeScript",
     "Robotlegs",
-    "IoC",
-    "PIXI"
+    "IoC"
   ],
   "author": "Goodgame Studios",
+  "contributors": [
+    "Endel Dreyer <endel.dreyer@gmail.com>",
+    "Tiago Schenkel <tiago.tche@gmail.com>"
+  ],
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi/issues"
+  },
+  "homepage": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi#readme",
   "dependencies": {
-    "robotlegs": "1.0.0-alpha.3"
+    "robotlegs": "^1.0.0-alpha.3"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^2.2.4",
+    "bluebird": "^3.4.6",
     "browserify-versionify": "^1.0.6",
+    "chai": "^3.5.0",
+    "es6-map": "^0.1.4",
+    "es6-symbol": "^3.1.0",
     "glslify": "^5.1.0",
-    "html-webpack-plugin": "^2.22.0",
-    "ify-loader": "^1.0.3",
-    "pixi.js": "^4.0.0",
-    "publish-please": "^2.1.4",
+    "imports-loader": "^0.6.5",
+    "istanbul": "^0.4.5",
+    "istanbul-instrumenter-loader": "^0.2.0",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-es6-shim": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha": "^1.1.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-sourcemap-writer": "^0.1.2",
+    "karma-typescript-preprocessor": "^0.2.1",
+    "karma-typescript-preprocessor2": "^1.2.1",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.0.2",
+    "pixi.js": "pixijs/pixi.js#dev",
+    "publish-please": "^2.2.0",
     "reflect-metadata": "^0.1.8",
-    "rimraf": "^2.5.2",
+    "remap-istanbul": "^0.6.4",
+    "rimraf": "^2.5.4",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
+    "ts-loader": "^0.8.2",
+    "ts-node": "^1.3.0",
+    "tslint": "^3.15.1",
+    "typedoc": "^0.4.5",
     "typescript": "^2.0.2",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "typescript-formatter": "^2.3.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.1"
   },
   "peerDependencies": {
-    "pixi.js": "*",
-    "eventemitter3": "*"
+    "reflect-metadata": "^0.1.3"
   }
 }
