update dependencies to latest version

--- a/package.json
+++ b/package.json
@@ -33,18 +33,21 @@
   },
   "homepage": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi#readme",
   "dependencies": {
-    "eventemitter3": "^2.0.0",
-    "pixi.js": "^4.0.1",
-    "robotlegs": "^1.0.0-alpha.5"
+    "eventemitter3": "^2.0.2",
+    "pixi.js": "^4.1.0",
+    "robotlegs": "^1.0.0-alpha.7"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^2.2.4",
     "bluebird": "^3.4.6",
+    "browserify-versionify": "^1.0.6",
     "chai": "^3.5.0",
     "es6-map": "^0.1.4",
     "es6-symbol": "^3.1.0",
+    "glslify": "^6.0.1",
+    "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "istanbul-instrumenter-loader": "^0.2.0",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
@@ -53,33 +56,28 @@
     "karma-coverage": "^1.1.1",
     "karma-es6-shim": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.1.1",
-    "karma-mocha-reporter": "^2.1.0",
+    "karma-mocha": "^1.2.0",
+    "karma-mocha-reporter": "^2.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
-    "karma-typescript-preprocessor": "^0.2.1",
-    "karma-typescript-preprocessor2": "^1.2.1",
     "karma-webpack": "^1.8.0",
-    "mocha": "^3.0.2",
+    "mocha": "^3.1.2",
     "publish-please": "^2.2.0",
     "reflect-metadata": "^0.1.8",
-    "remap-istanbul": "^0.6.4",
+    "remap-istanbul": "^0.7.0",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.5",
+    "sinon": "^2.0.0-pre.3",
     "sinon-chai": "^2.8.0",
-    "ts-loader": "^0.8.2",
-    "ts-node": "^1.3.0",
+    "ts-node": "^1.6.0",
     "tslint": "^3.15.1",
-    "typedoc": "^0.4.5",
-    "typescript": "^2.0.2",
-    "typescript-formatter": "^2.3.0",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-server": "^2.1.0-beta.0",
-    "html-webpack-plugin": "^2.22.0",
-    "pixi.js": "^4.1.0"
+    "typedoc": "^0.5.0",
+    "typescript": "^2.0.3",
+    "typescript-formatter": "^3.1.0",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.9"
   },
   "peerDependencies": {
     "pixi.js": "*",
