allow to specify the view class as generic on Mediator. closes #4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "./test/**/*.ts"
   ],
   "files": [
-    "./typings/index.d.ts"
+    "./typings/index.d.ts",
+    "./definitions/pixi.d.ts"
   ]
 }
