--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "dependencies": {
         "eventemitter3": "^2.0.2",
         "pixi.js": "^4.1.0",
-        "robotlegs": "^1.0.0-alpha.9"
+        "robotlegs": "^1.0.0-alpha.10"
     },
     "devDependencies": {
         "@types/chai": "^3.4.34",
@@ -49,7 +49,7 @@
         "es6-map": "^0.1.4",
         "es6-symbol": "^3.1.0",
         "glslify": "^6.0.1",
-        "html-webpack-plugin": "^2.22.0",
+        "html-webpack-plugin": "^2.24.1",
         "imports-loader": "^0.6.5",
         "istanbul": "^1.1.0-alpha.1",
         "istanbul-instrumenter-loader": "^0.2.0",
@@ -75,16 +75,16 @@
         "rimraf": "^2.5.4",
         "sinon": "^2.0.0-pre.3",
         "sinon-chai": "^2.8.0",
-        "ts-node": "^1.6.0",
-        "tslint": "^3.15.1",
-        "typedoc": "^0.5.0",
-        "typescript": "^2.0.3",
+        "ts-node": "^1.6.1",
+        "tslint": "^4.0.0-dev.0",
+        "typedoc": "^0.5.1",
+        "typescript": "^2.1.0-dev.20161101",
         "typescript-formatter": "^4.0.0",
         "webpack": "^2.1.0-beta.25",
-        "webpack-dev-server": "^2.1.0-beta.9"
+        "webpack-dev-server": "^2.1.0-beta.10"
     },
     "peerDependencies": {
         "pixi.js": "*",
-        "reflect-metadata": "^0.1.3"
+        "reflect-metadata": "^0.1.8"
     }
 }
