use ts-loader instead of awesome-typescript-loader

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "@types/mocha": "^2.2.32",
         "@types/sinon": "^1.16.31",
         "@types/pixi.js": "github:pixijs/pixi-typescript",
-        "awesome-typescript-loader": "^2.2.4",
         "bluebird": "^3.4.6",
         "browserify-versionify": "^1.0.6",
         "chai": "^3.5.0",
@@ -75,6 +74,7 @@
         "rimraf": "^2.5.4",
         "sinon": "^2.0.0-pre.3",
         "sinon-chai": "^2.8.0",
+        "ts-loader": "^1.0.0-beta.1",
         "ts-node": "^1.6.1",
         "tslint": "^4.0.0-dev.0",
         "typedoc": "^0.5.1",
