--- a/package.json
+++ b/package.json
@@ -34,14 +34,15 @@
   "homepage": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi#readme",
   "dependencies": {
     "eventemitter3": "^2.0.2",
-    "pixi.js": "^4.1.0",
-    "robotlegs": "^1.0.0-alpha.10"
+    "pixi.js": "^4.1.1",
+    "robotlegs": "^1.0.0-alpha.12"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.0.35",
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.32",
-    "@types/sinon": "^1.16.31",
     "@types/pixi.js": "github:pixijs/pixi-typescript",
+    "@types/sinon": "^1.16.31",
     "bluebird": "^3.4.6",
     "browserify-versionify": "^1.0.6",
     "chai": "^3.5.0",
@@ -59,7 +60,7 @@
     "karma-coverage": "^1.1.1",
     "karma-es6-shim": "^1.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-mocha": "^1.2.0",
+    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
@@ -72,13 +73,13 @@
     "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.7.0",
     "rimraf": "^2.5.4",
-    "sinon": "^2.0.0-pre.3",
+    "sinon": "^2.0.0-pre.4",
     "sinon-chai": "^2.8.0",
-    "ts-loader": "^1.0.0-beta.1",
-    "ts-node": "^1.6.1",
+    "ts-loader": "^1.2.0",
+    "ts-node": "^1.7.0",
     "tslint": "^3.15.1",
     "typedoc": "^0.5.1",
-    "typescript": "^2.1.0-dev.20161101",
+    "typescript": "^2.2.0-dev.20161111",
     "typescript-formatter": "^4.0.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.10"
