add publish config settings into package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "https://github.com/GoodgameStudios/RobotlegsJS-Pixi.git"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "keywords": [
     "TypeScript",
     "Robotlegs",
