--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/bluebird": "^3.0.35",
     "@types/chai": "^3.4.34",
     "@types/mocha": "^2.2.32",
-    "@types/pixi.js": "github:pixijs/pixi-typescript",
+    "@types/pixi.js": "^4.1.1",
     "@types/sinon": "^1.16.31",
     "bluebird": "^3.4.6",
     "browserify-versionify": "^1.0.6",
