--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "dependencies": {
     "eventemitter3": "^2.0.2",
     "pixi.js": "^4.1.1",
-    "robotlegs": "^1.0.0-alpha.12"
+    "robotlegs": "^1.0.0-alpha.13"
   },
   "devDependencies": {
     "@types/bluebird": "^3.0.37",
@@ -74,7 +74,7 @@
     "karma-webpack": "^2.0.2",
     "mocha": "^3.2.0",
     "publish-please": "^2.2.0",
-    "reflect-metadata": "^0.1.8",
+    "reflect-metadata": "0.1.8",
     "remap-istanbul": "^0.9.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.7",
