--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robotlegs-pixi",
-  "version": "1.0.0-alpha.15",
+  "version": "1.0.0",
   "description": "PIXI View Integration with RobotlegsJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
