send test report also to codebeat

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - stable
+env:
+  - CODECLIMATE_REPO_TOKEN=97d54db67368799ba09faa1fda1ace5021ffac93321e959546fee36bb7b13829
+  - CODECLIMATE_API_HOST=https://codebeat.co/webhooks/code_coverage CODECLIMATE_REPO_TOKEN=e3792494-1875-4826-be00-2124148b9287
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
@@ -16,6 +19,3 @@ after_script:
   - greenkeeper-lockfile-upload
 after_success:
   - codeclimate-test-reporter < coverage/lcov.info
-addons:
-  code_climate:
-    repo_token: 97d54db67368799ba09faa1fda1ace5021ffac93321e959546fee36bb7b13829
