--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "bluebird": "^3.5.0",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.1.2",
-    "es6-map": "^0.1.5",
-    "es6-symbol": "^3.1.1",
+    "core-js": "^2.5.1",
     "glslify": "^6.1.0",
     "html-webpack-plugin": "^2.30.1",
     "imports-loader": "^0.7.1",
@@ -76,7 +75,6 @@
     "mocha": "^3.5.3",
     "prettier": "^1.7.0",
     "publish-please": "^2.3.1",
-    "reflect-metadata": "^0.1.10",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.2",
     "sinon": "^3.2.1",
@@ -90,7 +88,6 @@
     "webpack-dev-server": "^2.8.2"
   },
   "peerDependencies": {
-    "pixi.js": "*",
-    "reflect-metadata": "^0.1.10"
+    "pixi.js": "*"
   }
 }
