ignore pull request template when when publishing package to NPM

--- a/.npmignore
+++ b/.npmignore
@@ -13,6 +13,7 @@ CHANGELOG.md
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 ISSUE_TEMPLATE.md
+PULL_REQUEST_TEMPLATE.md
 bower.json
 karma.conf.js
 tsconfig.json
