add compile scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "autoformat": "prettier --config .prettierrc --write {src,test,example,definitions}/**/*.ts",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
-    "prepare": "npm run clean-up && tsc -d",
+    "compile:src": "tsc -d",
+    "compile:test": "tsc -p tsconfig.test.json -d",
+    "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
