--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "test": "node --max-old-space-size=2048 node_modules/.bin/karma start --single-run",
     "mocha": "mocha test/**/*.test.ts --require ts-node/register",
     "autoformat": "prettier --config .prettierrc --write {src,test,example,definitions}/**/*.ts",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "tslint-check:src": "tslint-config-prettier-check ./tslint.json",
+    "tslint-check:test": "tslint-config-prettier-check ./tslint.test.json",
+    "tslint:src": "tslint --project tsconfig.json",
+    "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
+    "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
     "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
     "compile:src": "tsc -d",
     "compile:test": "tsc -p tsconfig.test.json -d",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
-    "publish-please": "npm run autoformat && npm run clean-up && npm run test && publish-please"
+    "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
   },
   "repository": {
     "type": "git",
