--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "tslint-config-prettier": "^1.13.0",
     "typescript": "^2.8.3",
     "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   },
   "peerDependencies": {
