--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
   "homepage": "https://github.com/RobotlegsJS/RobotlegsJS-Pixi#readme",
   "dependencies": {
     "@robotlegsjs/core": "^0.1.3",
-    "eventemitter3": "^3.1.0",
-    "pixi.js": "^4.8.0"
+    "eventemitter3": "^3.1.0"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
@@ -97,6 +96,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "peerDependencies": {
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.12",
+    "pixi.js": "4.x"
   }
 }
