--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "tslint:src": "tslint --project tsconfig.json",
     "tslint:test": "tslint --config tslint.test.json --project tsconfig.test.json",
     "tslint": "npm run tslint-check:src && npm run tslint-check:test && npm run tslint:src && npm run tslint:test",
-    "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib",
-    "compile:src": "tsc -d",
-    "compile:test": "tsc -p tsconfig.test.json -d",
+    "clean-up": "rimraf .nyc_output && rimraf coverage && rimraf lib && rimraf lib-test && rimraf dist-test",
+    "compile:src": "tsc -d --importHelpers",
+    "compile:test": "tsc -p tsconfig.test.json -d --importHelpers",
+    "dev": "webpack",
+    "build": "webpack --env.production",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
@@ -47,7 +49,8 @@
   "dependencies": {
     "@robotlegsjs/core": "^0.1.3",
     "eventemitter3": "^3.1.0",
-    "pixi.js": "^4.8.0"
+    "pixi.js": "^4.8.0",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.23",
@@ -67,7 +70,6 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^2.0.5",
     "karma-chai": "^0.1.0",
-    "karma-chai-sinon": "^0.1.5",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-es6-shim": "^1.0.0",
@@ -76,6 +78,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sinon": "^1.0.5",
+    "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
     "karma-webpack": "^3.0.0",
