--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .idea
-build
-dev
-lib
-node_modules
-typings
+.nyc_output
 coverage
-inversify.d.ts
+dist/lib
+dist-test
+lib
+lib-test
+node_modules
 *.as
 *.iml
 src/**/*.js
@@ -13,3 +13,4 @@ src/**/*.js.map
 test/**/*.js
 test/**/*.js.map
 npm-debug.log
+yarn-error.log
