--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,12 @@
 /.idea
+/.nyc_output
 /.vscode
 /coverage
-/dev
+/dist
+/dist-test
 /docs
 /example
-/lib/test
+/lib-test
 /not-ported-extensions
 /src
 /test
@@ -14,20 +16,15 @@ CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 ISSUE_TEMPLATE.md
 PULL_REQUEST_TEMPLATE.md
-bower.json
 karma.conf.js
 tsconfig.json
 tsconfig.test.json
-tsfmt.json
 tslint.json
-typings.json
+tslint.test.json
 webpack.config.js
 webpack.example.config.js
 yarn.lock
-.codeclimate.yml
 .editorconfig
-.eslintignore
-.eslintrc
 .gitignore
 .istanbul.yml
 .npmignore
