--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "author": "RobotlegsJS",
   "contributors": [
     "Endel Dreyer <endel.dreyer@gmail.com>",
+    "Mateusz Szymik <adde197@gmail.com>",
     "Tiago Schenkel <tiago.schenkel@gmail.com>"
   ],
   "license": "MIT",
