--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "karma-sourcemap-writer": "^0.1.2",
     "karma-webpack": "^3.0.0",
     "mocha": "^5.2.0",
+    "open-browser-webpack-plugin": "^0.0.5",
     "pixi.js": "^4.8.1",
     "prettier": "^1.14.2",
     "publish-please": "^3.2.0",
@@ -106,6 +107,7 @@
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "webpack-simple-progress-plugin": "^0.0.4"
   }
 }
