--- a/package.json
+++ b/package.json
@@ -61,11 +61,11 @@
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.24",
-    "@types/chai": "^4.1.6",
+    "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/pixi.js": "^4.8.1",
-    "@types/sinon": "^5.0.4",
-    "bluebird": "^3.5.2",
+    "@types/pixi.js": "^4.8.3",
+    "@types/sinon": "^5.0.6",
+    "bluebird": "^3.5.3",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
     "es6-map": "^0.1.5",
@@ -76,7 +76,7 @@
     "imports-loader": "^0.8.0",
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
@@ -93,21 +93,22 @@
     "mocha": "^5.2.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "pixi.js": "^4.8.2",
-    "prettier": "^1.14.3",
+    "prettier": "^1.15.2",
     "publish-please": "^5.2.0",
     "reflect-metadata": "^0.1.12",
     "remap-istanbul": "^0.12.0",
     "rimraf": "^2.6.2",
     "sinon": "^5.1.1",
     "sinon-chai": "^3.2.0",
-    "ts-loader": "^5.2.1",
+    "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.1.1",
-    "webpack": "^4.20.2",
+    "tslint-config-prettier": "^1.16.0",
+    "typescript": "^3.1.6",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^3.1.10",
     "webpack-simple-progress-plugin": "^0.0.4"
   }
 }
