--- a/.npmignore
+++ b/.npmignore
@@ -18,6 +18,7 @@ CONTRIBUTING.md
 ISSUE_TEMPLATE.md
 PULL_REQUEST_TEMPLATE.md
 karma.conf.js
+package-lock.json
 tsconfig.example.json
 tsconfig.json
 tsconfig.test.json
