--- a/package.json
+++ b/package.json
@@ -83,7 +83,6 @@
     "karma-es6-shim": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "^0.6.0",
     "karma-sinon": "^1.0.5",
     "karma-sinon-chai": "^2.0.2",
@@ -95,6 +94,7 @@
     "pixi.js": "^4.8.2",
     "prettier": "^1.15.2",
     "publish-please": "^5.2.0",
+    "puppeteer": "^1.10.0",
     "reflect-metadata": "^0.1.12",
     "remap-istanbul": "^0.12.0",
     "rimraf": "^2.6.2",
