--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/mocha": "^5.2.5",
     "@types/pixi.js": "^4.8.3",
     "@types/sinon": "^5.0.6",
+    "@types/webpack-env": "^1.13.6",
     "bluebird": "^3.5.3",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
@@ -77,14 +78,12 @@
     "istanbul": "^0.4.5",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^3.1.1",
-    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-es6-shim": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-istanbul": "^0.6.0",
-    "karma-sinon": "^1.0.5",
     "karma-sinon-chai": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-sourcemap-writer": "^0.1.2",
