--- a/package.json
+++ b/package.json
@@ -99,12 +99,12 @@
     "rimraf": "^3.0.2",
     "sinon": "^8.1.1",
     "sinon-chai": "^3.4.0",
+    "terser-webpack-plugin": "^2.3.5",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tslint": "^6.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
