--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "bluebird": "^3.7.2",
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
+    "clean-webpack-plugin": "^3.0.0",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
     "glslify": "^7.0.0",
