--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "compile:example": "tsc -p tsconfig.example.json -d --importHelpers",
     "dev": "webpack",
     "build": "webpack --env.production",
+    "build:example": "webpack --config ./webpack.example.config.js --env.production",
+    "deploy:example": "./deploy-example.sh",
     "prepare": "npm run clean-up && npm run compile:src",
     "prepublishOnly": "publish-please guard",
     "publish-please": "npm run tslint && npm run autoformat && npm run clean-up && npm run test && publish-please"
@@ -75,6 +77,7 @@
     "browserify-versionify": "^1.0.6",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
     "es6-map": "^0.1.5",
     "es6-symbol": "^3.1.3",
     "glslify": "^7.0.0",
